other-mpol/always-pull-images/.chainsaw-test/podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
        imagePullPolicy: IfNotPresent
      - name: bb2
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: bb
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: bb2
            image: ghcr.io/kyverno/test-busybox:1.35
            imagePullPolicy: IfNotPresent
          restartPolicy: OnFailure
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset01
spec:
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset01
spec:
  serviceName: busybox
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: replicaset01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: ReplicationController
metadata:
  name: replicationcontroller01
spec:
  replicas: 1
  selector:
    app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: Job
metadata:
  name: job01
spec:
  template:
    metadata:
      labels:
        app: busybox
    spec:
      restartPolicy: Never
      containers:
      - name: bb
        image: ghcr.io/kyverno/test-busybox:1.35
