other-mpol/always-pull-images/.kyverno-test/patchedResource2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    foo: bar
spec:
  containers:
  - name: "nginx-1"
    image: nginx:latest
    imagePullPolicy: Always
  - name: "nginx-2"
    image: nginx:latest
    imagePullPolicy: Always
