other-mpol/always-pull-images/.kyverno-test/resource-exception.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-exception-pod
  namespace: team-a
spec:
  containers:
  - name: first
    image: registry.example/skip-first:1
  - name: middle
    image: registry.example/mutate-middle:1
  - name: last
    image: registry.example/skip-last:1
