other-mpol/always-pull-images/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
  labels:
    foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    foo: bar
spec:
  containers:
  - name: "nginx-1"
    image: nginx:latest
  - name: "nginx-2"
    image: nginx:latest
